Did some optimisations

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,20 +1,28 @@
-system.numThreads = 4
+system.numThreads = 8
 system.edgeIndexRepresentation = BOOLEAN
 system.stratumMultiplier = 20000
 
 files {
   learningData = data/inputs/semStringsB.txt
   phoneInfo = data/phones/phones.txt
+  onsets = data/phones/onsets.txt
+}
+
+gen {
+  schwaRulesOnUF = true
+  schwaRulesOnSF = true
 }
 
 implementation {
   nodeSearch = SIMPLE
+  syllabifier = MAX_ONSET
   standardConstraintListSize = 50
-  expectedNumConstraints = 300
+  expectedNumConstraints = 256
+  expectedMaxViolations = 4
 }
 
 grammar {
-  mappingCacheSize = 0
+  mappingCacheSize = 1500
   useCandidateSpaces = true
 }
 
@@ -27,11 +35,12 @@ learning {
   variablePlasticity = false
   resample = true
   evaluationNoise = 1
-  numEvaluations = 2000
+  numEvaluations = 10000
 }
 
 stats {
-  showErrorEvery = 100 // Can enter either a fraction [of total evaluations] or the actual number
+  showErrorEvery = 0.01// Can enter either a fraction [of total evaluations] or the actual number
+  showCandidateGraphs = false
 }
 
 constraints {
