--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,11 @@
-system.numThreads = 8
-system.edgeIndexRepresentation = BOOLEAN
-system.stratumMultiplier = 20000
+system{
+  numThreads = 4
+  stratumMultiplier = 20000
+}
 
 files {
-  learningData = data/inputs/semStringsB.txt
+  learningData = data/inputs/semStrings.txt
+#  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
 }
@@ -14,32 +16,35 @@ gen {
 }
 
 implementation {
-  nodeSearch = SIMPLE
+  nodeSearch = DYNAMIC
   syllabifier = MAX_ONSET
+  structuralConstraintType = CLUSTER
+  sonorityType = Consonantal # Consonantal
+  edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
   expectedNumConstraints = 256
   expectedMaxViolations = 4
 }
 
 grammar {
-  mappingCacheSize = 1500
+  mappingCacheSize = 5000
   useCandidateSpaces = true
 }
 
 learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
-  initialPlasticity = 1
+  initialPlasticity = 0.5
   plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1
-  numEvaluations = 10000
+  numEvaluations = 20000
 }
 
 stats {
-  showErrorEvery = 0.01// Can enter either a fraction [of total evaluations] or the actual number
+  showErrorEvery = 0.01 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
 }
 
