--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ system{
 }
 
 files {
-  learningData = data/inputs/semStrings.txt
+  learningData = data/inputs/semStringsB.txt
 #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -33,14 +33,14 @@ grammar {
 
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
+  updateAlgorithm = WeightedUncancelled
   initialPlasticity = 0.5
-  plasticityDecay = 0.7
+  plasticityDecay = 0.85
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1
-  numEvaluations = 20000
+  numEvaluations = 50000
 }
 
 stats {
