Just backing up

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ system{
 }
 
 files {
-  learningData = data/inputs/semStringsB.txt
+  learningData = data/inputs/semStrings.txt
 #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -33,18 +33,18 @@ grammar {
 
 learning {
   direction = RIGHT
-  updateAlgorithm = WeightedUncancelled
-  initialPlasticity = 0.5
+  updateAlgorithm = AllUpHighDown
+  initialPlasticity = 0.7
   plasticityDecay = 0.85
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1
-  numEvaluations = 50000
+  numEvaluations = 10000
 }
 
 stats {
-  showErrorEvery = 0.01 // Can enter either a fraction [of total evaluations] or the actual number
+  showErrorEvery = 0.02 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
 }
 
