More changes to simulation files

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,8 +16,8 @@ gen {
 }
 
 implementation {
-  nodeSearch = DYNAMIC
-  syllabifier = MAX_ONSET
+  nodeSearch = SIMPLE
+  syllabifier = SIMPLE
   structuralConstraintType = CLUSTER
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
@@ -33,9 +33,9 @@ grammar {
 
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
-  initialPlasticity = 0.7
-  plasticityDecay = 0.85
+  updateAlgorithm = WeightedUncancelled
+  initialPlasticity = 2
+  plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
@@ -44,7 +44,7 @@ learning {
 }
 
 stats {
-  showErrorEvery = 0.02 // Can enter either a fraction [of total evaluations] or the actual number
+  showErrorEvery = 0.1 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
 }
 
