Fixing improved evaluation algorithm

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 system{
-  numThreads = 4
+  numThreads = 1
   stratumMultiplier = 20000
 }
 
@@ -17,7 +17,7 @@ gen {
 
 implementation {
   nodeSearch = LINKED_NODE
-  syllabifier = SIMPLE
+  syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
