Learning works again. Started on random baseline learner.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,10 @@
-system{
-  numThreads = 1
+system {
+  numThreads = 4
   stratumMultiplier = 20000
 }
 
 files {
-  learningData = data/inputs/semStrings.txt
+  learningData = data/inputs/semStringsSchwaVariation.txt
 #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -13,10 +13,22 @@ files {
 gen {
   schwaRulesOnUF = true
   schwaRulesOnSF = true
+
+  constrainers {
+    enabled = false
+    maxUnfoundNgraph = 0 // Set to 0 or lower to disable
+    ngraphSize = 2
+    stemAtEdgeConstrainer = false
+  }
+
+}
+
+lexicon {
+  maxLcsDifference = 1
 }
 
 implementation {
-  nodeSearch = LINKED_NODE
+  nodeSearch = DYNAMIC
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER
   sonorityType = Consonantal # Consonantal
@@ -33,8 +45,8 @@ grammar {
 
 learning {
   direction = RIGHT
-  updateAlgorithm = WeightedUncancelled
-  initialPlasticity = 2
+  updateAlgorithm = AllUpHighDown
+  initialPlasticity = 1
   plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
