Laatste veranderingen even committen

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -45,7 +45,7 @@ grammar {
 
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
+  updateAlgorithm = RandomBaseline
   initialPlasticity = 1
   plasticityDecay = 0.7
   plasticityEpochs = 4
