Lots of changes. Added HG evaluation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,62 +4,69 @@ system {
 }
 
 files {
-  learningData = data/inputs/semStringsSchwaVariation.txt
+#  learningData = data/inputs/pfc/PFC_pairs.txt
+  learningData = data/inputs/semStrings.txt
 #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
 }
 
 gen {
-  schwaRulesOnUF = true
-  schwaRulesOnSF = true
+  disagreementMSF = false
+  nullValuesMSF = false
+
+  schwaRulesOnUF = false
+  insertionRulesOnUF = true
+  deletionRulesOnUF = true
+
+  schwaRulesOnSF = false
 
   constrainers {
-    enabled = false
+    enabled = true
     maxUnfoundNgraph = 0 // Set to 0 or lower to disable
     ngraphSize = 2
-    stemAtEdgeConstrainer = false
+    stemAtEdgeConstrainer = true
   }
 
 }
 
 lexicon {
-  maxLcsDifference = 1
+  maxLcsDifference = 2
 }
 
 implementation {
-  nodeSearch = DYNAMIC
-  syllabifier = MAX_ONSET
-  structuralConstraintType = CLUSTER
+  nodeSearch = LINKED_NODE
+  syllabifier = SIMPLE
+  structuralConstraintType = SYLLABLE
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 256
+  expectedNumConstraints = 1024
   expectedMaxViolations = 4
 }
 
 grammar {
-  mappingCacheSize = 5000
+  mappingCacheSize = 10000
   useCandidateSpaces = true
 }
 
 learning {
   direction = RIGHT
-  updateAlgorithm = RandomBaseline
+  updateAlgorithm = AllUpHighDown
   initialPlasticity = 1
   plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1
-  numEvaluations = 10000
+  numEvaluations = 20000
 }
 
 stats {
-  showErrorEvery = 0.1 // Can enter either a fraction [of total evaluations] or the actual number
-  showCandidateGraphs = false
+  showErrorEvery = 0.05 // Can enter either a fraction [of total evaluations] or the actual number
+  showCandidateGraphs = true
 }
 
 constraints {
-
+  shortestFormBias = 0
 }
