Did a lot of manual editing of lexicon

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,24 @@
+learning {
+  direction = RIGHT
+  updateAlgorithm = AllUpHighDown
+  initialPlasticity = 1
+  plasticityDecay = 0.7
+  plasticityEpochs = 4
+  variablePlasticity = false
+  resample = true
+  evaluationNoise = 1
+  numEvaluations = 20000
+  numRuns = 5
+}
+
 system {
-  numThreads = 4
+  numThreads = 8
   stratumMultiplier = 20000
 }
 
 files {
-#  learningData = data/inputs/pfc/PFC_pairs.txt
-  learningData = data/inputs/semStrings.txt
+  learningData = data/inputs/pfc/PFC_pairs.txt
+#  learningData = data/inputs/semStringsPlural.txt
 #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -16,10 +29,10 @@ gen {
   nullValuesMSF = false
 
   schwaRulesOnUF = false
-  insertionRulesOnUF = true
+  insertionRulesOnUF = false
   deletionRulesOnUF = true
 
-  schwaRulesOnSF = false
+  schwaRulesOnSF = true
 
   constrainers {
     enabled = true
@@ -31,40 +44,32 @@ gen {
 }
 
 lexicon {
-  maxLcsDifference = 2
+  maxLcsDifference = 1
+  constructFromFile = true
+  saveToFile = false
 }
 
 implementation {
   nodeSearch = LINKED_NODE
-  syllabifier = SIMPLE
+  syllabifier = MAX_ONSET
   structuralConstraintType = SYLLABLE
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 1024
+  expectedNumConstraints = 2500
   expectedMaxViolations = 4
 }
 
 grammar {
-  mappingCacheSize = 10000
+  mappingCacheSize = 50000
   useCandidateSpaces = true
 }
 
-learning {
-  direction = RIGHT
-  updateAlgorithm = AllUpHighDown
-  initialPlasticity = 1
-  plasticityDecay = 0.7
-  plasticityEpochs = 4
-  variablePlasticity = false
-  resample = true
-  evaluationNoise = 1
-  numEvaluations = 20000
-}
+
 
 stats {
   showErrorEvery = 0.05 // Can enter either a fraction [of total evaluations] or the actual number
-  showCandidateGraphs = true
+  showCandidateGraphs = false
 }
 
 constraints {
