Various small changes. Now copying application.conf to results for later reference

--- a/src/main/resources/applicationPFC-succes.conf
+++ b/src/main/resources/applicationPFC-succes.conf
@@ -2,13 +2,13 @@ learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
   initialPlasticity = 1.5
-  plasticityDecay = 0.5
+  plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
-  evaluationNoise = 1.0
-  numEvaluations = 20000
-  numRuns = 100
+  evaluationNoise = 1
+  numEvaluations = 100000
+  numRuns = 5
   testDataFraction = 0.0
 }
 
@@ -18,9 +18,9 @@ system {
 }
 
 files {
-  #  learningData = data/inputs/pfc/PFC_pairs.txt
-  learningData = data/inputs/semStringsPluralB.txt
-  #  learningData = data/inputs/english/englishPlurals.txt
+  learningData = data/inputs/pfc/PFC_pairs.txt
+#  learningData = data/inputs/semStringsAllomorphy.txt
+#  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
 }
@@ -29,8 +29,8 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
-  schwaInsertionOnUF = true
-  insertionRulesOnUF = true
+  schwaInsertionOnUF = false
+  insertionRulesOnUF = false
   deletionRulesOnUF = true
 
   schwaRulesOnSF = true
@@ -52,7 +52,7 @@ lexicon {
 
 implementation {
   nodeSearch = LINKED_NODE
-  syllabifier = SIMPLE
+  syllabifier = MAX_ONSET
   structuralConstraintType = SYLLABLE
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
@@ -62,14 +62,14 @@ implementation {
 }
 
 grammar {
-  mappingCacheSize = 20000
+  mappingCacheSize = 10000
   useCandidateSpaces = true
 }
 
 
 
 stats {
-  showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
+  showErrorEvery = 0.05 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
 }
 
