--- a/src/main/resources/applicationPFC.conf
+++ b/src/main/resources/applicationPFC.conf
@@ -2,13 +2,13 @@ learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
   initialPlasticity = 1.5
-  plasticityDecay = 0.5
+  plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
-  evaluationNoise = 1.0
-  numEvaluations = 20000
-  numRuns = 100
+  evaluationNoise = 1
+  numEvaluations = 100000
+  numRuns = 5
   testDataFraction = 0.0
 }
 
@@ -18,8 +18,8 @@ system {
 }
 
 files {
-  #  learningData = data/inputs/pfc/PFC_pairs.txt
-  learningData = data/inputs/semStringsPluralB.txt
+  learningData = data/inputs/pfc/PFC_pairs.txt
+  #  learningData = data/inputs/semStringsPlural.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -29,30 +29,30 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
-  schwaInsertionOnUF = true
-  insertionRulesOnUF = true
+  schwaInsertionOnUF = false
+  insertionRulesOnUF = false
   deletionRulesOnUF = true
 
   schwaRulesOnSF = true
 
   constrainers {
-    enabled = false
+    enabled = true
     maxUnfoundNgraph = 0 // Set to 0 or lower to disable
     ngraphSize = 2
-    stemAtEdgeConstrainer = false
+    stemAtEdgeConstrainer = true
   }
 
 }
 
 lexicon {
-  maxLcsDifference = 3
+  maxLcsDifference = 1
   constructFromFile = true
   saveToFile = false
 }
 
 implementation {
   nodeSearch = LINKED_NODE
-  syllabifier = SIMPLE
+  syllabifier = MAX_ONSET
   structuralConstraintType = SYLLABLE
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
@@ -62,7 +62,7 @@ implementation {
 }
 
 grammar {
-  mappingCacheSize = 20000
+  mappingCacheSize = 50000
   useCandidateSpaces = true
 }
 
