--- a/src/main/resources/applicationPlurals.conf
+++ b/src/main/resources/applicationPlurals.conf
@@ -2,11 +2,11 @@ learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
   initialPlasticity = 1.5
-  plasticityDecay = 0.5
+  plasticityDecay = 0.7
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
-  evaluationNoise = 1.0
+  evaluationNoise = 1
   numEvaluations = 20000
   numRuns = 100
   testDataFraction = 0.0
@@ -18,9 +18,9 @@ system {
 }
 
 files {
-  #  learningData = data/inputs/pfc/PFC_pairs.txt
-  learningData = data/inputs/semStringsPluralB.txt
-  #  learningData = data/inputs/english/englishPlurals.txt
+#  learningData = data/inputs/pfc/PFC_pairs.txt
+  learningData = data/inputs/semStringsAllomorphy.txt
+#  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
 }
@@ -46,7 +46,7 @@ gen {
 
 lexicon {
   maxLcsDifference = 3
-  constructFromFile = true
+  constructFromFile = false
   saveToFile = false
 }
 
@@ -62,7 +62,7 @@ implementation {
 }
 
 grammar {
-  mappingCacheSize = 20000
+  mappingCacheSize = 50000
   useCandidateSpaces = true
 }
 
