Lots of changes, also to input files

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,13 +2,13 @@ learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
   initialPlasticity = 1.5
-  plasticityDecay = 0.5
-  plasticityEpochs = 4
+  plasticityDecay = 0.85
+  plasticityEpochs = 8
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
-  numEvaluations = 20000
-  numRuns = 100
+  numEvaluations = 100000
+  numRuns = 2
   testDataFraction = 0.0
 }
 
@@ -18,8 +18,8 @@ system {
 }
 
 files {
-  #  learningData = data/inputs/pfc/PFC_pairs.txt
-  learningData = data/inputs/semStringsPluralB.txt
+  #  learningData = data/inputs/pfc/PFC_version03.txt
+  learningData = data/inputs/semStrings.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -29,16 +29,17 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
-  schwaInsertionOnUF = true
-  insertionRulesOnUF = true
+  schwaInsertionOnUF = false
+  insertionRulesOnUF = false
   deletionRulesOnUF = true
 
-  schwaRulesOnSF = true
+  schwaDeletionOnSF = true
+  schwaInsertionOnSF = false
 
   constrainers {
     enabled = false
     maxUnfoundNgraph = 0 // Set to 0 or lower to disable
-    ngraphSize = 2
+    ngraphSize = 3
     stemAtEdgeConstrainer = false
   }
 
@@ -46,31 +47,33 @@ gen {
 
 lexicon {
   maxLcsDifference = 3
-  constructFromFile = true
+  constructFromFile = false
   saveToFile = false
 }
 
 implementation {
   nodeSearch = LINKED_NODE
-  syllabifier = SIMPLE
-  structuralConstraintType = SYLLABLE
+  syllabifier = MAX_ONSET
+  structuralConstraintType = CLUSTER # other is SYLLABLE
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 3500
+  expectedNumConstraints = 4500
   expectedMaxViolations = 4
 }
 
 grammar {
   mappingCacheSize = 20000
   useCandidateSpaces = true
+  writeCandidateSpaces = true
 }
 
 
 
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
-  showCandidateGraphs = false
+  showCandidateGraphs = true
+  numDataToTest = 2000
 }
 
 constraints {
