Changes mostly to configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 2
+  numRuns = 5
   testDataFraction = 0.0
 }
 
@@ -18,8 +18,8 @@ system {
 }
 
 files {
-  #  learningData = data/inputs/pfc/PFC_version03.txt
-  learningData = data/inputs/semStrings.txt
+  learningData = data/inputs/pfc/PFC_version03.txt
+  #  learningData = data/inputs/semStrings.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -47,7 +47,7 @@ gen {
 
 lexicon {
   maxLcsDifference = 3
-  constructFromFile = false
+  constructFromFile = true
   saveToFile = false
 }
 
@@ -72,12 +72,12 @@ grammar {
 
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
-  showCandidateGraphs = true
+  showCandidateGraphs = false
   numDataToTest = 2000
 }
 
 constraints {
-  shortestFormBias = 0
+  shortestFormBias = -5
   stratify = false
   strata {
     SemF = 0
