--- a/src/main/resources/applicationPFC-succes.conf
+++ b/src/main/resources/applicationPFC-succes.conf
@@ -53,7 +53,7 @@ lexicon {
 implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
-  structuralConstraintType = SYLLABLE
+  structuralConstraintType = CLUSTER
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
