--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,7 +18,7 @@ system {
 }
 
 files {
-  learningData = data/inputs/pfc/PFC_version03.txt
+  learningData = data/inputs/pfc/PFC_version04.txt
   #  learningData = data/inputs/semStrings.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
@@ -46,7 +46,7 @@ gen {
 }
 
 lexicon {
-  maxLcsDifference = 3
+  maxLcsDifference = 2
   constructFromFile = true
   saveToFile = false
 }
@@ -58,14 +58,14 @@ implementation {
   sonorityType = Consonantal # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 4500
+  expectedNumConstraints = 11000
   expectedMaxViolations = 4
 }
 
 grammar {
   mappingCacheSize = 20000
   useCandidateSpaces = true
-  writeCandidateSpaces = true
+  writeCandidateSpaces = false
 }
 
 
