Made MFeatures simpler

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,10 +43,17 @@ gen {
     stemAtEdgeConstrainer = false
   }
 
+  abstractEnabled = false
+  abstractPhonemes = [
+      "z~Z"
+      "t~T"
+    ]
+
+
 }
 
 lexicon {
-  maxLcsDifference = 2
+  maxLcsDifference = 3
   constructFromFile = true
   saveToFile = false
 }
