verder met candidate spaces from file

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.21</version>
         </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+
 
 
     </dependencies>
