verder met candidate spaces from file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -72,7 +72,8 @@ implementation {
 grammar {
   mappingCacheSize = 20000
   useCandidateSpaces = true
-  writeCandidateSpaces = false
+  loadCandidateSpaces = false
+  writeCandidateSpaces = true
 }
 
 
