--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 5
+  numRuns = 30
   testDataFraction = 0.0
 }
 
@@ -70,10 +70,10 @@ implementation {
 }
 
 grammar {
-  mappingCacheSize = 20000
+  mappingCacheSize = 100000
   useCandidateSpaces = true
   loadCandidateSpaces = false
-  writeCandidateSpaces = true
+  writeCandidateSpaces = false
 }
 
 
