--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -62,7 +62,7 @@ implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
-  sonorityType = Consonantal # Consonantal
+  sonorityType = Sonority # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
   expectedNumConstraints = 11000
