Small update to PFC data class

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,13 +2,13 @@ learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
   initialPlasticity = 1.5
-  plasticityDecay = 0.85
-  plasticityEpochs = 8
+  plasticityDecay = 0.8
+  plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 30
+  numRuns = 10
   testDataFraction = 0.0
 }
 
@@ -62,7 +62,7 @@ implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
-  sonorityType = Sonority # Consonantal
+  sonorityType = Consonantal # Sonority # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
   expectedNumConstraints = 11000
@@ -81,11 +81,11 @@ grammar {
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
-  numDataToTest = 2000
+  numDataToTest = 100
 }
 
 constraints {
-  shortestFormBias = -5
+  shortestFormBias = 0
   stratify = false
   strata {
     SemF = 0
