Trying to replace non-optional schwas

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,14 @@
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
+  updateAlgorithm = WeightedUncancelled
   initialPlasticity = 1.5
-  plasticityDecay = 0.8
+  plasticityDecay = 0.75
   plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 10
+  numRuns = 5
   testDataFraction = 0.0
 }
 
@@ -59,7 +59,7 @@ lexicon {
 }
 
 implementation {
-  nodeSearch = LINKED_NODE
+  nodeSearch = DYNAMIC
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
   sonorityType = Consonantal # Sonority # Consonantal
