Trying to replace non-optional schwas

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 5
+  numRuns = 25
   testDataFraction = 0.0
 }
 
@@ -59,7 +59,7 @@ lexicon {
 }
 
 implementation {
-  nodeSearch = DYNAMIC
+  nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
   sonorityType = Consonantal # Sonority # Consonantal
@@ -81,7 +81,7 @@ grammar {
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
-  numDataToTest = 100
+  numDataToTest = 700
 }
 
 constraints {
