Probereren hierarchie wat sneller te maken

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,14 @@
 learning {
   direction = RIGHT
   updateAlgorithm = WeightedUncancelled
-  initialPlasticity = 2.5
+  initialPlasticity = 1.5
   plasticityDecay = 0.75
-  plasticityEpochs = 4
+  plasticityEpochs = 8
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 25
+  numRuns = 1
   testDataFraction = 0.0
 }
 
@@ -18,8 +18,9 @@ system {
 }
 
 files {
+
   learningData = data/inputs/pfc/PFC_version04.txt
-  #  learningData = data/inputs/semStrings.txt
+  #learningData = data/inputs/semStringsPluralB.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -29,6 +30,7 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
+  schwaDeletionOnUf = false
   schwaInsertionOnUF = false
   insertionRulesOnUF = false
   deletionRulesOnUF = true
@@ -49,11 +51,19 @@ gen {
       "t~T"
     ]
 
+  phoneticLiaisonDeletion = false
+  phoneticLiaisonDeletors = [
+    "z"
+    "t"
+    "n"
+  ]
+
+  automaticSchwaAppendage = true
 
 }
 
 lexicon {
-  maxLcsDifference = 3
+  maxLcsDifference = 2
   constructFromFile = true
   saveToFile = false
 }
@@ -62,10 +72,10 @@ implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
-  sonorityType = Consonantal # Sonority # Consonantal
+  sonorityType = Consonantal #
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 11000
+  expectedNumConstraints = 15000
   expectedMaxViolations = 4
 }
 
@@ -81,7 +91,7 @@ grammar {
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
-  numDataToTest = 700
+  numDataToTest = 1500
 }
 
 constraints {
