Made some additional optimizations. Trying to optimize hierarchies next.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 1
+  numRuns = 25
   testDataFraction = 0.0
 }
 
@@ -58,7 +58,7 @@ gen {
     "n"
   ]
 
-  automaticSchwaAppendage = true
+  automaticSchwaAppendage = false
 
 }
 
@@ -75,7 +75,7 @@ implementation {
   sonorityType = Consonantal #
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 15000
+  expectedNumConstraints = 50000
   expectedMaxViolations = 4
 }
 
@@ -96,6 +96,7 @@ stats {
 
 constraints {
   shortestFormBias = 0
+  punishZeroMorphs = 0
   stratify = false
   strata {
     SemF = 0
