Next step: save results on liaison items

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,16 @@
+name = testSimpleSerial
+
 learning {
   direction = RIGHT
-  updateAlgorithm = WeightedUncancelled
-  initialPlasticity = 1.5
+  updateAlgorithm = AllUpHighDown
+  initialPlasticity = 4
   plasticityDecay = 0.75
   plasticityEpochs = 8
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 25
+  numRuns = 2
   testDataFraction = 0.0
 }
 
@@ -19,7 +21,9 @@ system {
 
 files {
 
-  learningData = data/inputs/pfc/PFC_version04.txt
+  learningData = data/inputs/pfc/PFC_version04-simpler.txt
+  #lexicon = data/inputs/pfc/PFC_version04-simpler-canonical.lex
+  lexicon = data/inputs/pfc/PFC_version04-simpler.lex
   #learningData = data/inputs/semStringsPluralB.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
@@ -30,9 +34,10 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
-  schwaDeletionOnUf = false
+  applySfEdgeRules = true
+  schwaDeletionOnUf = true
   schwaInsertionOnUF = false
-  insertionRulesOnUF = false
+  insertionRulesOnUF = true
   deletionRulesOnUF = true
 
   schwaDeletionOnSF = true
@@ -47,11 +52,12 @@ gen {
 
   abstractEnabled = false
   abstractPhonemes = [
-      "z~Z"
-      "t~T"
-    ]
+    "z~Z"
+    "t~T"
+    "n~N"
+  ]
 
-  phoneticLiaisonDeletion = false
+  phoneticLiaisonDeletion = true
   phoneticLiaisonDeletors = [
     "z"
     "t"
@@ -63,7 +69,7 @@ gen {
 }
 
 lexicon {
-  maxLcsDifference = 2
+  maxLcsDifference = 3
   constructFromFile = true
   saveToFile = false
 }
@@ -72,18 +78,20 @@ implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
-  sonorityType = Consonantal #
+  maxClusterSize = 5
+  sonorityType = Consonantal # Consonantal #
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 50000
+  expectedNumConstraints = 30000
   expectedMaxViolations = 4
+  lazySampling = true
 }
 
 grammar {
-  mappingCacheSize = 100000
+  mappingCacheSize = 200000
   useCandidateSpaces = true
   loadCandidateSpaces = false
-  writeCandidateSpaces = false
+  writeCandidateSpaces = true
 }
 
 
@@ -92,6 +100,8 @@ stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
   numDataToTest = 1500
+  numLiaisonRiverPlots = 5
+  saveHierarchies = true
 }
 
 constraints {
@@ -100,10 +110,10 @@ constraints {
   stratify = false
   strata {
     SemF = 0
-    MsF = 1
-    MF = 1
-    UF = 2
-    SF = 3
-    PF = 4
+    MsF = 0
+    MF = 0
+    UF = 1
+    SF = 2
+    PF = 3
   }
 }
