Something appears to have gone wrong w -- parallel learners don't succeed anymore. Try to retrieve old settings

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,14 +3,14 @@ name = testSimpleSerial
 learning {
   direction = RIGHT
   updateAlgorithm = AllUpHighDown
-  initialPlasticity = 4
-  plasticityDecay = 0.75
-  plasticityEpochs = 8
+  initialPlasticity = 1
+  plasticityDecay = 0.5
+  plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 2
+  numRuns = 5
   testDataFraction = 0.0
 }
 
@@ -57,7 +57,7 @@ gen {
     "n~N"
   ]
 
-  phoneticLiaisonDeletion = true
+  phoneticLiaisonDeletion = false
   phoneticLiaisonDeletors = [
     "z"
     "t"
@@ -91,7 +91,7 @@ grammar {
   mappingCacheSize = 200000
   useCandidateSpaces = true
   loadCandidateSpaces = false
-  writeCandidateSpaces = true
+  writeCandidateSpaces = false
 }
 
 
