Something appears to have gone wrong w -- parallel learners don't succeed anymore. Try to retrieve old settings

--- a/src/main/resources/application-olderWorking.conf
+++ b/src/main/resources/application-olderWorking.conf
@@ -10,7 +10,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 25
+  numRuns = 2
   testDataFraction = 0.0
 }
 
@@ -21,7 +21,7 @@ system {
 
 files {
 
-  learningData = data/inputs/pfc/PFC_version04.txt
+  learningData = data/inputs/pfc/PFC_version04-simpler.txt
   #lexicon = data/inputs/pfc/PFC_version04-simpler-canonical.lex
   lexicon = data/inputs/pfc/PFC_version04-simpler.lex
   #learningData = data/inputs/semStringsPluralB.txt
@@ -84,14 +84,14 @@ implementation {
   standardConstraintListSize = 50
   expectedNumConstraints = 30000
   expectedMaxViolations = 4
-  lazySampling = false
+  lazySampling = true
 }
 
 grammar {
   mappingCacheSize = 200000
   useCandidateSpaces = true
   loadCandidateSpaces = false
-  writeCandidateSpaces = false
+  writeCandidateSpaces = true
 }
 
 
