removed spurious pairs from input

--- a/outputs/20170605-054029/application.conf
+++ b/outputs/20170605-054029/application.conf
@@ -1,16 +1,14 @@
-name = simulation2d
-
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
-  initialPlasticity = 4
+  updateAlgorithm = WeightedUncancelled
+  initialPlasticity = 1.5
   plasticityDecay = 0.75
-  plasticityEpochs = 8
+  plasticityEpochs = 4
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 5
+  numRuns = 25
   testDataFraction = 0.0
 }
 
@@ -20,11 +18,8 @@ system {
 }
 
 files {
-
-  learningData = data/inputs/pfc/PFC_version05.txt
-  lexicon = data/inputs/pfc/PFC_version04-simpler-canonical.lex
-  #lexicon = data/inputs/pfc/PFC_version04-simpler.lex
-  #learningData = data/inputs/semStringsPluralB.txt
+  learningData = data/inputs/pfc/PFC_version04.txt
+  #  learningData = data/inputs/semStrings.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
   onsets = data/phones/onsets.txt
@@ -34,10 +29,8 @@ gen {
   disagreementMSF = true
   nullValuesMSF = true
 
-  applySfEdgeRules = true
-  schwaDeletionOnUf = true
   schwaInsertionOnUF = false
-  insertionRulesOnUF = true
+  insertionRulesOnUF = false
   deletionRulesOnUF = true
 
   schwaDeletionOnSF = true
@@ -52,19 +45,10 @@ gen {
 
   abstractEnabled = false
   abstractPhonemes = [
-    "z~Z"
-    "t~T"
-    "n~N"
-  ]
+      "z~Z"
+      "t~T"
+    ]
 
-  phoneticLiaisonDeletion = true
-  phoneticLiaisonDeletors = [
-    "z"
-    "t"
-    "n"
-  ]
-
-  automaticSchwaAppendage = false
 
 }
 
@@ -78,17 +62,15 @@ implementation {
   nodeSearch = LINKED_NODE
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
-  maxClusterSize = 5
-  sonorityType = Consonantal # Consonantal #
+  sonorityType = Consonantal # Sonority # Consonantal
   edgeIndexRepresentation = BOOLEAN
   standardConstraintListSize = 50
-  expectedNumConstraints = 30000
+  expectedNumConstraints = 11000
   expectedMaxViolations = 4
-  lazySampling = false
 }
 
 grammar {
-  mappingCacheSize = 200000
+  mappingCacheSize = 100000
   useCandidateSpaces = true
   loadCandidateSpaces = false
   writeCandidateSpaces = false
@@ -99,21 +81,18 @@ grammar {
 stats {
   showErrorEvery = 0.025 // Can enter either a fraction [of total evaluations] or the actual number
   showCandidateGraphs = false
-  numDataToTest = 1500
-  numLiaisonRiverPlots = 5
-  saveHierarchies = true
+  numDataToTest = 700
 }
 
 constraints {
   shortestFormBias = 0
-  punishZeroMorphs = 0
-  stratify = false
+  stratify = true
   strata {
     SemF = 0
-    MsF = 0
-    MF = 0
-    UF = 1
-    SF = 2
-    PF = 3
+    MsF = 1
+    MF = 1
+    UF = 2
+    SF = 3
+    PF = 4
   }
 }
