--- a/outputs/20170701-054702/application.conf
+++ b/outputs/20170701-054702/application.conf
@@ -1,4 +1,4 @@
-name = simulation2d
+name = testSimpleSerial
 
 learning {
   direction = RIGHT
@@ -10,7 +10,7 @@ learning {
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 5
+  numRuns = 2
   testDataFraction = 0.0
 }
 
@@ -21,9 +21,9 @@ system {
 
 files {
 
-  learningData = data/inputs/pfc/PFC_version05.txt
-  lexicon = data/inputs/pfc/PFC_version04-simpler-canonical.lex
-  #lexicon = data/inputs/pfc/PFC_version04-simpler.lex
+  learningData = data/inputs/pfc/PFC_version04-simpler.txt
+  #lexicon = data/inputs/pfc/PFC_version04-simpler-canonical.lex
+  lexicon = data/inputs/pfc/PFC_version04-simpler.lex
   #learningData = data/inputs/semStringsPluralB.txt
   #  learningData = data/inputs/english/englishPlurals.txt
   phoneInfo = data/phones/phones.txt
@@ -57,7 +57,7 @@ gen {
     "n~N"
   ]
 
-  phoneticLiaisonDeletion = true
+  phoneticLiaisonDeletion = false
   phoneticLiaisonDeletors = [
     "z"
     "t"
@@ -75,7 +75,7 @@ lexicon {
 }
 
 implementation {
-  nodeSearch = LINKED_NODE
+  nodeSearch = DYNAMIC
   syllabifier = MAX_ONSET
   structuralConstraintType = CLUSTER # other is SYLLABLE
   maxClusterSize = 5
@@ -84,14 +84,14 @@ implementation {
   standardConstraintListSize = 50
   expectedNumConstraints = 30000
   expectedMaxViolations = 4
-  lazySampling = false
+  lazySampling = true
 }
 
 grammar {
   mappingCacheSize = 200000
   useCandidateSpaces = true
   loadCandidateSpaces = false
-  writeCandidateSpaces = false
+  writeCandidateSpaces = true
 }
 
 
