Added vowel spaces classes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,15 +2,15 @@ name = simulation2d
 
 learning {
   direction = RIGHT
-  updateAlgorithm = AllUpHighDown
-  initialPlasticity = 4
+  updateAlgorithm = WeightedUncancelled
+  initialPlasticity = 1
   plasticityDecay = 0.75
   plasticityEpochs = 8
   variablePlasticity = false
   resample = true
   evaluationNoise = 1.0
   numEvaluations = 100000
-  numRuns = 5
+  numRuns = 25
   testDataFraction = 0.0
 }
 
